--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate-card",
-  "version": "1.4.0",
-  "description": "Lovelace boilerplate-card",
+  "name": "circle-sensor-card",
+  "version": "0.0.1",
+  "description": "Lovelace circle sensor card (rebuilt using boilerplate-card template)",
   "keywords": [
     "home-assistant",
     "homeassistant",
@@ -10,9 +10,9 @@
     "lovelace",
     "custom-cards"
   ],
-  "module": "boilerplate-card.js",
-  "repository": "git@github.com:custom_cards/boilerplate-card.git",
-  "author": "Ian Richardson <iantrich@gmail.com>",
+  "module": "circle-sensor-card.js",
+  "repository": "git@github.com:mundschenk-at/circle-sensor-card-v2.git",
+  "author": "Peter Putzer <code@mundschenk.at>",
   "license": "MIT",
   "dependencies": {
     "custom-card-helpers": "^1.7.2",
